feat: verb buttons added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 				<select id = "verb" required>
 					<option value = "" disabled selected>Choose Your Verb Tense</option>
 					<option value = "past">Past</option>
+					<option value = "present">Present</option>
+					<option value = "future">Future</option>
 				</select>
 				<select id="noun" required>
 					<option value="" disabled selected>Choose Your Noun</option>
